name:                xolist
version:             0.1.0.0
synopsis:            Etude on List Applicative
description:         Please see README.md
homepage:            https://github.com/abinr/xolist#readme
license:             BSD3
license-file:        LICENSE
author:              Brian John Farrar
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     XOList
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite xolist-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , xolist
                     , QuickCheck
                     , checkers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/abinr/xolist
